:lipstick: (chart-admin) add shadow for static previews

--- a/packages/@ourworldindata/grapher/src/core/grapher.scss
+++ b/packages/@ourworldindata/grapher/src/core/grapher.scss
@@ -165,6 +165,10 @@ $zindex-controls-drawer: 140;
     }
 }
 
+.GrapherComponent.isStatic {
+    border: none;
+}
+
 .GrapherComponent.isExportingToSvgOrPng {
     padding: 0 !important;
 }
